class LecturePart {
  final int partId;
  final int lectureId;
  final String title;
  final int orderNo;

  const LecturePart({
    required this.partId,
    required this.lectureId,
    required this.title,
    required this.orderNo,
  });
}
