class Tag {
  final int tagId;
  final String tagName;

  const Tag({
    required this.tagId,
    required this.tagName,
  });
}
