class Video {
  final int videoId;
  final int partId;
  final String youtubeUrl;
  final int duration;

  const Video({
    required this.videoId,
    required this.partId,
    required this.youtubeUrl,
    required this.duration,
  });
}
