erDiagram

USER {
    bigint user_id PK
    string email
    string password
    string nickname
    string role
    datetime created_at
}

LECTURE {
    bigint lecture_id PK
    string title
    text description
    string lecture_type
    string instructor_name
    datetime created_at
    bigint user_id FK
}

LECTURE_PART {
    bigint part_id PK
    bigint lecture_id FK
    string title
    int order_no
}

VIDEO {
    bigint video_id PK
    bigint part_id FK
    string youtube_url
    int duration
}

LECTURE_PATTERN {
    bigint pattern_id PK
    bigint lecture_id FK
    int row_num
    text pattern_text
}

PART_PATTERN {
    bigint pattern_id PK
    bigint part_id FK
    int start_time
    int end_time
    int row_num
    text pattern_text
}

PATTERN_SYMBOL {
    bigint symbol_id PK
    string symbol
    text description
}

TAG {
    bigint tag_id PK
    string tag_name
}

LECTURE_TAG {
    bigint lecture_id FK
    bigint tag_id FK
}

QUESTION {
    bigint question_id PK
    bigint user_id FK
    bigint lecture_id FK
    string title
    text content
    string image_url
    datetime created_at
}

ANSWER {
    bigint answer_id PK
    bigint question_id FK
    bigint instructor_id FK
    text content
    datetime created_at
}

ENROLLMENT {
    bigint enrollment_id PK
    bigint user_id FK
    bigint lecture_id FK
    int completed_parts
    int total_parts
    int progress
    datetime created_at
}

USER ||--o{ LECTURE : creates
LECTURE ||--o{ LECTURE_PART : contains
LECTURE_PART ||--o| VIDEO : has
LECTURE ||--o{ LECTURE_PATTERN : has
LECTURE_PART ||--o{ PART_PATTERN : includes

LECTURE ||--o{ LECTURE_TAG : tagged
TAG ||--o{ LECTURE_TAG : used_in

USER ||--o{ QUESTION : asks
LECTURE ||--o{ QUESTION : has
QUESTION ||--o{ ANSWER : receives
USER ||--o{ ANSWER : answers

USER ||--o{ ENROLLMENT : enrolls
LECTURE ||--o{ ENROLLMENT : enrolled_in
